force-app/main/default/objects/ssot__VehicleTrip__dlm/fields/ssot__InitialOdometerReadingNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__InitialOdometerReadingNumber__c</fullName>
    <label>Initial Odometer Reading</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InitialOdometerReadingNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>