force-app/main/default/objects/ssot__VehicleTrip__dlm/fields/ssot__OperatorId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OperatorId__c</fullName>
    <label>Operator Id</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OperatorId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>