force-app/main/default/objects/ssot__VehicleTrip__dlm/fields/ssot__PauseDurationUnitofMeasure__c.field-meta.xml
<CustomField>
    <fullName>ssot__PauseDurationUnitofMeasure__c</fullName>
    <label>Pause Duration Unit of Measure</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PauseDurationUnitofMeasure</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>