force-app/main/default/objects/ssot__VehicleTrip__dlm/fields/ssot__rel_1697761234424_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761234424_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VehicleTrip_IdleDurationUnitofMeasur_rel</label>
    <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
    <relationshipLabel>VehicleTrip_IdleDurationUnitofMeasur_rel</relationshipLabel>
    <relationshipName>rel_1697761234424_end</relationshipName>
    <type>Lookup</type>
</CustomField>