force-app/main/default/objects/ssot__VehicleTrip__dlm/fields/ssot__ShiftEndTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShiftEndTime__c</fullName>
    <label>Shift End Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShiftEndTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>