force-app/main/default/objects/ssot__VehicleTrip__dlm/fields/ssot__ShiftId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ShiftId__c</fullName>
    <label>Shift Id</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ShiftId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>