force-app/main/default/objects/ssot__VehicleTrip__dlm/fields/ssot__StartLocationLatitude__c.field-meta.xml
<CustomField>
    <fullName>ssot__StartLocationLatitude__c</fullName>
    <label>Start Location Latitude</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StartLocationLatitude</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>