force-app/main/default/objects/ssot__VehicleTrip__dlm/fields/ssot__TelematicsProviderId__c.field-meta.xml
<CustomField>
    <fullName>ssot__TelematicsProviderId__c</fullName>
    <label>Telematics Provider</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TelematicsProviderId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>