force-app/main/default/objects/ssot__VehicleTrip__dlm/fields/ssot__TripCostAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TripCostAmount__c</fullName>
    <label>Trip Cost</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TripCostAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>