force-app/main/default/objects/ssot__VehicleTrip__dlm/fields/ssot__TripCostUomId__c.field-meta.xml
<CustomField>
    <fullName>ssot__TripCostUomId__c</fullName>
    <label>Trip Cost UOM</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TripCostUomId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>