force-app/main/default/objects/ssot__VehicleTrip__dlm/fields/ssot__VehicleTrip_AssetId_map_Asset_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__VehicleTrip_AssetId_map_Asset_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VehicleTrip_AssetId_map_Asset_Id_N_1</label>
    <referenceTo>ssot__Asset__dlm</referenceTo>
    <relationshipLabel>VehicleTrip_AssetId_map_Asset_Id_N_1</relationshipLabel>
    <relationshipName>VehicleTrip_AssetId_map_Asset_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>